--- a/SpaceStationRescue/SpaceStationRescue.vcxproj
+++ b/SpaceStationRescue/SpaceStationRescue.vcxproj
@@ -23,12 +23,16 @@
     <ClCompile Include="Flock.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Obstacle.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Pvector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Boid.h" />
     <ClInclude Include="Flock.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Obstacle.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Pvector.h" />
   </ItemGroup>
   <ItemGroup>
