--- a/SpaceStationRescue/SpaceStationRescue.vcxproj
+++ b/SpaceStationRescue/SpaceStationRescue.vcxproj
@@ -22,6 +22,8 @@
     <ClCompile Include="Boid.cpp" />
     <ClCompile Include="Flock.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Ground.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Obstacle.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -31,6 +33,8 @@
     <ClInclude Include="Boid.h" />
     <ClInclude Include="Flock.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Ground.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="Obstacle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Pvector.h" />
